<resources>
    <string name="app_name">AlquilsaFire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="buscar">Buscar un alquiler</string>
    <string name="chat">Chat</string>
    <string name="favorito">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="poner">Poner en alquiler</string>
    <string name="salir">Salir</string>
    <string name="ubicacion">Mis Ubicaciones</string>
    <string name="prefs_file">preferenciasApp</string>


    <string name="google_maps_key">AIzaSyCuGLml3dvbIepMLQ1-jwJE85Iw4ykqFk0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>